# se3-ad-recipes

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: autofix.yml  rust-tests.yml
benches/: nll_hessian.rs
src/: jacobians_ad.rs  lib.rs  manif_recipe_minimal.rs  nll_bench.rs  nll_tests.rs  projective.rs  se3_adsafe.rs  se3_unsafe.rs  so3_adsafe.rs  so3_unsafe.rs
src/autodiff/: ad_trait.rs  forward_ad.rs  mod.rs  nested_ad.rs  reverse_ad_n6.rs
